src/objects/sdfs__FormulaShare_Record_Log__c.object
<CustomObject>
    <fields>
        <fullName>sdfs__All_Deleted_Sharing_Successful__c</fullName>
        <formula>sdfs__Number_Processed_Record_Share_Deletes__c = sdfs__Number_Successful_Record_Share_Deletes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Deleted Sharing Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__All_Inserted_Sharing_Successful__c</fullName>
        <formula>sdfs__Number_Processed_Record_Share_Inserts__c = sdfs__Number_Successful_Record_Share_Inserts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Inserted Sharing Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__All_Sharing_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ture if all FormulaShare sharing for this record has been removed. When this is the case, total records shared tracked in FormulaShare usage will be reduced by 1</inlineHelpText>
        <label>All Sharing Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__Assessment_Type_Override__c</fullName>
        <description>Written for flow logs to specify Assessment Type explicitly</description>
        <label>Assessment Type Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Assessment_Type__c</fullName>
        <formula>IF(!ISBLANK(sdfs__Assessment_Type_Override__c), sdfs__Assessment_Type_Override__c,
IF( sdfs__Context__c = &apos;Trigger&apos;, &apos;Transaction Safe&apos;, &apos;Full Assessment&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Full Assessment&quot; indicates all rules were evaluated for this record during sharing assessment, and is the default mode for batch assessment, as well as being an option for assessment triggered by flows. &quot;Transaction Safe&quot; means only rules which could be evaluated without querying and iterating collections of records were applied, and is the default for triggers and an option in flows</inlineHelpText>
        <label>Assessment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Batch_Log_Id__c</fullName>
        <formula>CASESAFEID(sdfs__FormulaShare_Batch_Log__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Log Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Context_Detail__c</fullName>
        <description>Indicates operation type which initiated sharing assessment: &quot;Record Triggered Flow&quot;, &quot;Apex Trigger&quot;, &quot;Requested via Flow&quot;, &quot;Requested via Apex&quot;, &quot;Full Recalculation Batch&quot;, &quot;Manually Initiated Batch&quot; and &quot;Targeted Calculation Job&quot;</description>
        <label>Context Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Context__c</fullName>
        <formula>IF(!ISBLANK(sdfs__Context_Detail__c), sdfs__Context_Detail__c,
IF(ISBLANK(sdfs__FormulaShare_Batch_Log__c), &quot;Trigger&quot;, &quot;Batch&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Context</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__FormulaShare_Batch_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FormulaShare Batch Log</label>
        <referenceTo>sdfs__FormulaShare_Log__c</referenceTo>
        <relationshipName>FormulaShare_Processed_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sdfs__FormulaShare_Rule_in_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule in Batch (Required for Test Class)</label>
        <referenceTo>sdfs__FormulaShare_Rule_in_Batch__c</referenceTo>
        <relationshipLabel>FormulaShare Record Logs</relationshipLabel>
        <relationshipName>FormulaShare_Record_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sdfs__Number_Processed_Record_Share_Deletes__c</fullName>
        <label>Number Processed Record Share Deletes</label>
        <summaryFilterItems>
            <field>sdfs__FormulaShare_Processed_Record_Share__c.sdfs__Operation__c</field>
            <operation>equals</operation>
            <value>Delete</value>
        </summaryFilterItems>
        <summaryForeignKey>sdfs__FormulaShare_Processed_Record_Share__c.sdfs__Processed_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sdfs__Number_Processed_Record_Share_Inserts__c</fullName>
        <label>Number Processed Record Share Inserts</label>
        <summaryFilterItems>
            <field>sdfs__FormulaShare_Processed_Record_Share__c.sdfs__Operation__c</field>
            <operation>equals</operation>
            <value>Insert</value>
        </summaryFilterItems>
        <summaryForeignKey>sdfs__FormulaShare_Processed_Record_Share__c.sdfs__Processed_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sdfs__Number_Successful_Record_Share_Deletes__c</fullName>
        <label>Number Successful Record Share Deletes</label>
        <summaryFilterItems>
            <field>sdfs__FormulaShare_Processed_Record_Share__c.sdfs__Operation__c</field>
            <operation>equals</operation>
            <value>Delete</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>sdfs__FormulaShare_Processed_Record_Share__c.sdfs__Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryForeignKey>sdfs__FormulaShare_Processed_Record_Share__c.sdfs__Processed_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sdfs__Number_Successful_Record_Share_Inserts__c</fullName>
        <label>Number Successful Record Share Inserts</label>
        <summaryFilterItems>
            <field>sdfs__FormulaShare_Processed_Record_Share__c.sdfs__Operation__c</field>
            <operation>equals</operation>
            <value>Insert</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>sdfs__FormulaShare_Processed_Record_Share__c.sdfs__Status__c</field>
            <operation>equals</operation>
            <value>Success</value>
        </summaryFilterItems>
        <summaryForeignKey>sdfs__FormulaShare_Processed_Record_Share__c.sdfs__Processed_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sdfs__Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Processed_Date_Time_Epoch__c</fullName>
        <formula>(sdfs__Processed_Date_Time__c -  DATETIMEVALUE(&quot;1970-01-01 00:00:00&quot;)) * (24 * 60 * 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processed Date / Time Epoch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Processed_Date_Time__c</fullName>
        <label>Processed Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sdfs__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Record__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; sdfs__Record_Id__c, &quot;/&quot; &amp; sdfs__Record_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FormulaShare_Record_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sdfs__Sharing_Applied_for_First_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>True if the sharing created is the first FormulaShare sharing detected on this record. When this is the case, total records shared tracked in FormulaShare usage will be increased by 1</inlineHelpText>
        <label>Sharing Applied for First Time</label>
        <type>Checkbox</type>
    </fields>
    <label>FormulaShare Record Log</label>
    <listViews>
        <fullName>sdfs__All</fullName>
        <columns>NAME</columns>
        <columns>sdfs__Context__c</columns>
        <columns>sdfs__Object__c</columns>
        <columns>sdfs__Record__c</columns>
        <columns>sdfs__Processed_Date_Time__c</columns>
        <columns>sdfs__All_Inserted_Sharing_Successful__c</columns>
        <columns>sdfs__All_Deleted_Sharing_Successful__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FRL-{00000000}</displayFormat>
        <label>FormulaShare Record Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormulaShare Record Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>sdfs__FormulaShare_Record_Log_Share__c</fullName>
        <label>FormulaShare Record Log Share</label>
    </sharingReasons>
</CustomObject>